# cat-client-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cat/: aggregator.rs  aggregator_event.rs  aggregator_metric.rs  aggregator_transaction.rs  cat.rs  config.rs  consts.rs  manager.rs  message.rs  mod.rs  producer.rs  router.rs  scheduler.rs  sender.rs
src/message/: consts.rs  encoder_binary.rs  event.rs  header.rs  message.rs  metric.rs  mod.rs  transaction.rs
src/message/internal/: default_forked_transaction.rs  default_transaction.rs  mod.rs  null_transaction.rs
src/message/spi/: context.rs  message_tree.rs  mod.rs
src/utils/: mod.rs
