[package]
name = "cat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip = "0.1"
hostname = "0.3"
async-trait = "0.1.71"
bytes = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rand = "0.8.5"

[dependencies.async-std]
version = "1.8.0"
features = ["attributes"]

[dependencies.tokio]
version = "1"
features = ["macros"]